<resources>
    <string name="app_name">Simple Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="number1_label">Number 1</string>
    <string name="number2_label">Number 2</string>

    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="multiply_button">*</string>
    <string name="divide_button">/</string>

    <string name="result_label">Result</string>
    <string name="calc_pi_button">Calculate Pi number</string>
</resources>
